# AI_Assistant_Psyhoterapist

./: .gitignore  README.md  business_proposal.md  project_overview.md  pyproject.toml  scaffold_plan.json
config/: access_governance.json  cache.json  contact_channels.json  endpoints.json  latency_masking.json  model_routing.json  profile_policies.json  profile_registry.example.jsonc  profile_registry.generated.jsonc  profile_sources.json  role_channel_matrix.json  runtime.json  token_limits.json
data/: README.md
data_sources/: README.md  literature_ingest_registry.json
docs/: architecture_split.md  hybrid_memory_kb_online_strategy.md  improvement_backlog.md  literature_candidate_handoff.md  operations_design.md  profile_ingest_and_voice_pipeline.md
manifests/: manifest.de.jsonc  manifest.en.jsonc  manifest.hu.jsonc  manifest_schema.json  phrase_schema.json
scripts/: backfill_content_metadata.py  backfill_hu_style_metadata.py  backfill_review_metadata.py  build_external_knowledge_pack.py  build_literature_batch.py  build_profile_ingest_pack.py  build_remote_knowledge_pack.py  build_review_candidate_pack.py  check_legacy_data_empty.py  check_locale_alignment.py  check_manifest_consistency.py  check_sensitive_diff.py  clinical_review_hook.py  compare_llm_models.py  generate_hu_triggers.py  import_review_candidate_pack.py  locale_translation_cache.json  migrate_existing_hu_data.py  populate_locales_from_hu.py  process_review_inbox.py  publish_runtime_bundle.py  record_content_audit_event.py  report_content_review_queue.py  report_hu_style_coverage.py  (+8 more)
(+390 files in other folders)
