[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant-psychotherapist"
version = "0.1.0"
description = "Manifest-driven phrase selection runtime for localized therapeutic support flows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23.0",
  "pypdf>=5.4.0",
]

[project.optional-dependencies]
dev = [
  "deep-translator>=1.11.4",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
